--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12.5"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.29.0"
+pytest = "^8.3.3"
 
 [build-system]
 requires = ["poetry-core"]
