--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.12,<3.14"
+argparse = "^1.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
