--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ argparse = "^1.4.0"
 ipython = "^8.29.0"
 pytest = "^8.3.3"
 pyinstaller = "^6.11.1"
+streamlit = "^1.40.1"
 
 [build-system]
 requires = ["poetry-core"]
