adding clickable graph

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ipython = "^8.29.0"
 pytest = "^8.3.3"
 pyinstaller = "^6.11.1"
 streamlit = "^1.40.1"
+streamlit-aggrid = "^1.0.5"
 
 [build-system]
 requires = ["poetry-core"]
