--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest = "^8.3.3"
 pyinstaller = "^6.11.1"
 streamlit = "^1.40.1"
 streamlit-aggrid = "^1.0.5"
+plotly = "^5.24.1"
 
 [build-system]
 requires = ["poetry-core"]
